--- a/announcements/_posts/2024-08-07-links.markdown
+++ b/announcements/_posts/2024-08-07-links.markdown
@@ -1,5 +1,5 @@
 ---
-permalink: /links/
+permalink: /links
 layout: post-devlog
 short_title:  "Unite a la comunidad!"
 tags: announcement socialmedia
