open external links in new tab

--- a/announcements/_posts/2024-08-07-twitch.markdown
+++ b/announcements/_posts/2024-08-07-twitch.markdown
@@ -3,4 +3,4 @@ layout: post-devlog
 short_title:  "Streams de desarrollo en Unity"
 tags: announcement
 ---
-Seguime en [twitch.tv/julianblane](https://www.twitch.tv/julianblane) y segui en vivo el desarrollo de PROFUNDIDADES
+Seguime en {% include link-new-tab.html text="twitch.tv/julianblane" url="https://www.twitch.tv/julianblane" %}  y segui en vivo el desarrollo de PROFUNDIDADES
