--- a/announcements/_posts/2024-08-07-links.markdown
+++ b/announcements/_posts/2024-08-07-links.markdown
@@ -4,7 +4,7 @@ layout: post-devlog
 short_title:  "Unite a la comunidad!"
 tags: announcement socialmedia
 ---
-Veni a charlar con nosotros en mi [Discord](https://discord.gg/qweCwhkDSU).
+Veni a charlar con nosotros en mi {% include link-new-tab.html text="Discord" url="https://discord.gg/qweCwhkDSU" %}.
 
 Buscame como ```julianblane``` para enterarte de las actualizaciones de mis juegos:
 {% include social-media-icons.html youtube="julianblane" tiktok="julianblane" instagram="julianblane.dev" %}
